# File-Remover

./: CMakeLists.txt  README.md  build.sh  number.txt  run.sh
.github/workflows/: debian.yml  linux.yml  mac.yml  windows.yml
make_deb/: README.md
make_deb/src/debian/: changelog  control  install
src/: curl_list.c  curl_list.h  filelist.c  filelist.h  lib.c  lib.h  list_diff.c  list_diff.h  listdiff.c  listdiff.h  main.c  remove_file.c  remove_file.h
